--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 	"homepage": "https://github.com/riderjensen/rest-api-simple#readme",
 	"dependencies": {
 		"body-parser": "^1.18.3",
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"express-validator": "^5.3.1",
+		"mongoose": "^5.4.4"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.9"
