--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"body-parser": "^1.18.3",
 		"express": "^4.16.4",
 		"express-validator": "^5.3.1",
+		"jsonwebtoken": "^8.4.0",
 		"mongoose": "^5.4.4",
 		"multer": "^1.4.1",
 		"uuid": "^3.3.2"
