--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"jsonwebtoken": "^8.4.0",
 		"mongoose": "^5.4.4",
 		"multer": "^1.4.1",
+		"socket.io": "^2.2.0",
 		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
