--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
 		"express": "^4.16.4",
+		"express-graphql": "^0.7.1",
 		"express-validator": "^5.3.1",
+		"graphql": "^14.1.1",
 		"jsonwebtoken": "^8.4.0",
 		"mongoose": "^5.4.4",
 		"multer": "^1.4.1",
