--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"mongoose": "^5.4.4",
 		"multer": "^1.4.1",
 		"socket.io": "^2.2.0",
-		"uuid": "^3.3.2"
+		"uuid": "^3.3.2",
+		"validator": "^10.11.0"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.9"
